--- a/package.json
+++ b/package.json
@@ -53,5 +53,6 @@
     "tailwindcss": "^3.4.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "proxy": "http://15.164.219.39:8079"
 }
