--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "axe-core": "^4.9.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "html-loader": "^5.0.0",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.3",
